--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,20 +3,10 @@ github:
     master: false
     branches: false
 tasks:
-  - name: deploy
+  - name: OB Standalone
     init: docker pull oceanbase/oceanbase-ce
     command: |
       echo "alias sh='/bin/bash'" >> ~/.profile
       source ~/.profile
       docker run -p 2881:2881 --name obstandalone -e MINI_MODE=1 -d oceanbase/oceanbase-ce
-      clear
-      bash /workspace/ob-example/tools/scripts/gitpod.sh
-
-  - name: DB Server
-    command: |
-      cd /workspace/ob-example
-      echo "alias sh='/bin/bash'" >> ~/.profile
-      source ~/.profile
-      clear
-      echo -e "$(< ./tools/scripts/gitpod_welcome)"
-    openMode: split-right
+      bash /workspace/ob-example/tools/gitpod/init.sh
