--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on: [ push, pull_request ]
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
