--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  golang:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: [ "go-sql-driver" ]
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Set Go env
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+      - name: Start docker container
+        timeout-minutes: 5
+        run: |
+          docker run --name oceanbase-ce --network host -e MODE=slim -e FASTBOOT=true -d oceanbase/oceanbase-ce
+          eval 'while ! docker logs oceanbase-ce | grep -q "boot success!"; do echo "booting..."; sleep 10; done'
+          echo "boot success!"
+      - name: Run example for ${{ matrix.module }}
+        run: |
+          cd ob-example-golang/${{ matrix.module }}
+          sh run.sh
+
   java:
     runs-on: ubuntu-latest
     strategy:
