--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,7 @@ jobs:
         with:
           go-version: '1.20'
       - name: Start docker container
-        timeout-minutes: 5
-        run: |
-          docker run --name oceanbase-ce --network host -e MODE=slim -e FASTBOOT=true -d oceanbase/oceanbase-ce
-          eval 'while ! docker logs oceanbase-ce | grep -q "boot success!"; do echo "booting..."; sleep 10; done'
-          echo "boot success!"
+        uses: oceanbase/setup-oceanbase-ce@v1.0
       - name: Run example for ${{ matrix.module }}
         run: |
           cd golang/${{ matrix.module }}
@@ -53,11 +49,7 @@ jobs:
           distribution: 'zulu'
           cache: 'maven'
       - name: Start docker container
-        timeout-minutes: 5
-        run: |
-          docker run --name oceanbase-ce --network host -e MODE=slim -e FASTBOOT=true -d oceanbase/oceanbase-ce
-          eval 'while ! docker logs oceanbase-ce | grep -q "boot success!"; do echo "booting..."; sleep 10; done'
-          echo "boot success!"
+        uses: oceanbase/setup-oceanbase-ce@v1.0
       - name: Run example for ${{ matrix.module }}
         run: |
           cd java/${{ matrix.module }}
@@ -76,11 +68,7 @@ jobs:
         with:
           python-version: "3.9"
       - name: Start docker container
-        timeout-minutes: 5
-        run: |
-          docker run --name oceanbase-ce --network host -e MODE=slim -e FASTBOOT=true -d oceanbase/oceanbase-ce
-          eval 'while ! docker logs oceanbase-ce | grep -q "boot success!"; do echo "booting..."; sleep 10; done'
-          echo "boot success!"
+        uses: oceanbase/setup-oceanbase-ce@v1.0
       - name: Run example for ${{ matrix.module }}
         run: |
           cd python/${{ matrix.module }}
