--- a/java/oceanbase-client/pom.xml
+++ b/java/oceanbase-client/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.oceanbase.example</groupId>
+  <groupId>com.oceanbase.samples</groupId>
   <artifactId>oceanbase-client</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>ob-example-oceanbase-client</name>
+  <name>ob-samples-oceanbase-client</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
