--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
             language: 'java'
           - name: 'oceanbase-client'
             language: 'java'
+          - name: 'testcontainers-java'
+            language: 'java'
+            with_oceanbase_container: false
           - name: 'pymysql'
             language: 'python'
     uses: ./.github/workflows/basic-ci.yml
