feat: Add a demo of Spring JDBC working with OceanBase.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,12 @@ jobs:
             with_oceanbase_container: false
           - name: 'pymysql'
             language: 'python'
+          - name: 'oceanbase-spring-boot-mysql-jpa'
+            language: 'java'
+          - name: 'oceanbase-mybatis'
+            language: 'java'
+          - name: 'oceanbase-spring-jdbc'
+            language: 'java'
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
