[improve] add new module for ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
             language: 'python'
           - name: 'mysql-connector-python'
             language: 'python'
+          - name: 'mybatisplus-java'
+            language: 'java'
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
