[improve] update jdk version

--- a/java/mybatisplus-java/pom.xml
+++ b/java/mybatisplus-java/pom.xml
@@ -14,7 +14,9 @@
   <name>mybatisplus-java</name>
   <description>mybatisplus-java</description>
   <properties>
-    <java.version>17</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
