--- a/java/mybatisplus-java/pom.xml
+++ b/java/mybatisplus-java/pom.xml
@@ -5,19 +5,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.7</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>2.7.17</version>
+    <relativePath/>
   </parent>
   <groupId>com.oceanbase.samples</groupId>
   <artifactId>mybatisplus-java</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>mybatisplus-java</name>
   <description>mybatisplus-java</description>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>com.oceanbase</groupId>
@@ -53,7 +48,14 @@
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>1.19.7</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>1.19.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
