--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
             language: 'python'
           - name: 'mybatisplus-java'
             language: 'java'
+            with_oceanbase_container: false
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
