--- a/java/mybatis/pom.xml
+++ b/java/mybatis/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.oceanbase.samples</groupId>
-  <artifactId>oceanbase-mybatis</artifactId>
+  <artifactId>mybatis</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>oceanbase-mysql</name>
