--- a/java/spring-boot-mysql-jpa/pom.xml
+++ b/java/spring-boot-mysql-jpa/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.oceanbase.samples</groupId>
-  <artifactId>oceanbase-spring-boot-mysql-jpa</artifactId>
+  <artifactId>spring-boot-mysql-jpa</artifactId>
   <version>1.0-SNAPSHOT</version>
   <parent>
     <groupId>org.springframework.boot</groupId>
