[feature] add mybatis-plus samples (#37)
* [feature] add mybatis-plus samples

* [improve] add new module for ci

* [improve] add run.sh for ci

* [improve] remove chinese comments

* [improve] remove chinese comments

* [improve] remove useless dependencies

* [improve] add readme and readme-cn

* [improve] update jdk version

* [improve] support jdk 8

* [improve] update with_oceanbase_container false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
             language: 'python'
           - name: 'mysql-connector-python'
             language: 'python'
+          - name: 'mybatisplus-java'
+            language: 'java'
+            with_oceanbase_container: false
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
