hotfix: set 'with_oceanbase_container' for every job  explicitly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,22 @@ jobs:
         module:
           - name: 'go-sql-driver'
             language: 'golang'
+            with_oceanbase_container: true
           - name: 'mysql-connector-java'
             language: 'java'
+            with_oceanbase_container: true
           - name: 'oceanbase-client'
             language: 'java'
+            with_oceanbase_container: true
           - name: 'testcontainers-java'
             language: 'java'
             with_oceanbase_container: false
           - name: 'pymysql'
             language: 'python'
+            with_oceanbase_container: true
           - name: 'mysql-connector-python'
             language: 'python'
+            with_oceanbase_container: true
           - name: 'mybatisplus-java'
             language: 'java'
             with_oceanbase_container: false
@@ -36,4 +41,4 @@ jobs:
     with:
       module: ${{ matrix.module.name }}
       language: ${{ matrix.module.language }}
-      with_oceanbase_container: ${{ matrix.module.with_oceanbase_container || true }}
+      with_oceanbase_container: ${{ matrix.module.with_oceanbase_container }}
