--- a/.github/workflows/ci-hertzbeat.yml
+++ b/.github/workflows/ci-hertzbeat.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build and Test
         run: |
           cd applications/hertzbeat
-          mvn clean install
+          mvn clean test
