--- a/java/springboot/src/main/resources/application.yml
+++ b/java/springboot/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     database: mysql # mysql, oracle
     show-sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:2881/test?characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:2881/?characterEncoding=UTF-8
     username: root@test
     password:
   sql:
