[improve]: use a pre-deployed OceanBase container in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
             with_oceanbase_container: false
           - name: 'spring-jdbc'
             language: 'java'
-            with_oceanbase_container: false
+            with_oceanbase_container: true
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
