[Feat]: Add a demo of SpringBoot (#46)
* [Feat]: Add a demo of SpringBoot

* [Fix]: Fix dataSourceScriptDatabaseInitializer initialization failure caused by jdbc url configuration

* [improve]: use a pre-deployed OceanBase container

* [improve]: junit assert modify

* [improve]: init.sql modify

* [improve]: init.sql modify

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
           - name: 'spring-jdbc'
             language: 'java'
             with_oceanbase_container: true
+          - name: 'springboot'
+            language: 'java'
+            with_oceanbase_container: true
     uses: ./.github/workflows/basic-ci.yml
     with:
       module: ${{ matrix.module.name }}
