--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,48 @@ jobs:
           - name: 'springboot'
             language: 'java'
             with_oceanbase_container: true
-    uses: ./.github/workflows/basic-ci.yml
+    uses: ./.github/workflows/basic-workflow.yml
     with:
       module: ${{ matrix.module.name }}
       language: ${{ matrix.module.language }}
       with_oceanbase_container: ${{ matrix.module.with_oceanbase_container }}
+
+  application-hertzbeat:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Java Env
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+          cache: 'maven'
+      - name: Start OceanBase container
+        uses: oceanbase/setup-oceanbase-ce@v1
+        with:
+          network: 'host'
+      - name: Build and Test
+        run: |
+          cd applications/hertzbeat
+          mvn clean test
+
+  application-sveltekit:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Setup Node.js env
+        uses: actions/setup-node@v4
+        with:
+          node-version: 21
+          cache: 'npm'
+          cache-dependency-path: applications/sveltekit
+      - uses: pnpm/action-setup@v4
+        name: Setup pnpm
+        with:
+          version: 8
+          run_install: false
+      - name: Build and run sample
+        run: |
+          cd applications/sveltekit
+          pnpm install
