feat: add sample for `sqlalchemy`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
             with_oceanbase_container: true
           - name: 'mysql-connector-python'
             language: 'python'
+          - name: 'sqlalchemy'
+            language: 'python'
             with_oceanbase_container: true
           - name: 'mybatis-plus'
             language: 'java'
