chore: update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           - name: 'go-sql-driver'
             language: 'golang'
             with_oceanbase_container: true
+          - name: 'gorm'
+            language: 'golang'
+            with_oceanbase_container: true
           - name: 'mysql-connector-java'
             language: 'java'
             with_oceanbase_container: true
