[Feat]: Add a demo of Python `sqlalchemy` (#57)
* feat: add sample for `sqlalchemy`

* rm author and port

* fix ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
           - name: 'mysql-connector-python'
             language: 'python'
             with_oceanbase_container: true
+          - name: 'sqlalchemy'
+            language: 'python'
+            with_oceanbase_container: true
           - name: 'mybatis-plus'
             language: 'java'
             with_oceanbase_container: false
