--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
           - name: 'springboot'
             language: 'java'
             with_oceanbase_container: true
+          - name: 'mysql2'
+            language: 'ruby'
+            with_oceanbase_container: true
     uses: ./.github/workflows/basic-workflow.yml
     with:
       module: ${{ matrix.module.name }}
