--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,12 @@ jobs:
   application-mydata:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Set Go env
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       - name: Build and run sample
         run: |
           cd applications/mydata
