--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,9 @@ jobs:
           - name: 'mysql2'
             language: 'ruby'
             with_oceanbase_container: true
+          - name: 'sequel'
+            language: 'ruby'
+            with_oceanbase_container: true
     uses: ./.github/workflows/basic-workflow.yml
     with:
       module: ${{ matrix.module.name }}
