exit when module not exist

--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -57,5 +57,5 @@ jobs:
           network: 'host'
       - name: Run sample for ${{ inputs.module }}
         run: |
-          cd ${{ inputs.language }}/${{ inputs.module }}
+          cd ${{ inputs.language }}/${{ inputs.module }} || exit
           sh run.sh
