--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -17,8 +17,12 @@ jobs:
         module:
           - name: 'mysql2'
             with_oceanbase_container: true
+          - name: 'prisma'
+            with_oceanbase_container: true
+            oceanbase_image_tag: '4.2.2'
     uses: ./.github/workflows/basic-workflow.yml
     with:
       language: 'javascript'
       module: ${{ matrix.module.name }}
       with_oceanbase_container: ${{ matrix.module.with_oceanbase_container }}
+      oceanbase_image_tag: ${{ matrix.module.oceanbase_image_tag }}
