feat: Add typeorm sample for javascript

--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -17,6 +17,8 @@ jobs:
         module:
           - name: 'mysql2'
             with_oceanbase_container: true
+          - name: 'typeorm'
+            with_oceanbase_container: true
     uses: ./.github/workflows/basic-workflow.yml
     with:
       language: 'javascript'
