--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -16,6 +16,10 @@ on:
         required: false
         description: 'Whether to use a pre-deployed OceanBase container in CI workflow.'
         default: true
+      oceanbase_image_tag:
+        type: string
+        required: false
+        description: 'The tag of OceanBase CE Docker image.'
 
 concurrency:
   group: basic-ci-${{ github.event.pull_request.number || github.ref }}-${{ inputs.module }}
@@ -55,6 +59,7 @@ jobs:
         uses: oceanbase/setup-oceanbase-ce@v1
         with:
           network: 'host'
+          image_tag: ${{ inputs.oceanbase_image_tag || 'latest' }}
       - name: Run sample for ${{ inputs.module }}
         run: |
           cd ${{ inputs.language }}/${{ inputs.module }} || exit
