feat: Add typeorm sample for javascript (#75)
Co-authored-by: He Wang <wanghechn@qq.com>

--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -17,6 +17,8 @@ jobs:
         module:
           - name: 'mysql2'
             with_oceanbase_container: true
+          - name: 'typeorm'
+            with_oceanbase_container: true
           - name: 'drizzle'
             with_oceanbase_container: true
             oceanbase_image_tag: '4.2.3_BETA'
