feat: Add sequelize sample for javascript (#74)
Co-authored-by: He Wang <wanghechn@qq.com>

--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -18,6 +18,9 @@ jobs:
           - name: 'mysql2'
             with_oceanbase_container: true
 
+          - name: 'sequelize'
+            with_oceanbase_container: true
+
           - name: 'prisma'
             with_oceanbase_container: true
             oceanbase_image_tag: '4.2.2'
