--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -54,6 +54,14 @@ jobs:
         with:
           ruby-version: 3.1
           bundler-cache: true
+      - name: Setup C++ env
+        if: ${{ inputs.language == 'cpp' }}
+        uses: aminya/setup-cpp@v1
+        with:
+          compiler: gcc  
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libmysqlcppconn-dev
       - name: Start OceanBase container
         if: ${{ inputs.with_oceanbase_container }}
         uses: oceanbase/setup-oceanbase-ce@v1
